traefik-test/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-proxy
  annotations:
spec:
  type: NodePort
  selector:
    app: traefik-proxy
    tier: proxy
  ports:
  - port: 443
    targetPort: 80
