traefik-test/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-service
spec:
  rules:
  - host: traefik.blualism.com
    http:
      paths:
      - backend:
          serviceName: auth-service
          servicePort: 80
